style.css
/* ... */
@media (max-width: 1216px) {
  .about-content {
    flex-direction: column; 
  }
  .logo {
    font-size: 2.6vmax;
  }
  .theme-toggle {
    margin-top: 10rem; /* Ensure theme toggle is below the menu icon */
  }
  #menu-icon {
    display: block;
    font-size: 5vmax;
  }
  .navbar {
    position: absolute;
    top: 100%;
    left: 0;
    width: 100%;
    padding: 1rem 1%;
    background: var(--bg-color);
    border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
    display: none;
    height: 420px;
  }

  .navbar :active {
    display: block;
    
  }
  .navbar a {
    display: block;
    font-size: 2.8vmax;
    margin: 3rem 0;
    margin-left: 8vmax;
  }
  .navbar a i {
    margin-right: 2vmax;
  }
  .navbar a.active {
    color: var(--txt-color);
    font-size: 2.5vmax;
  }
  /* .home {
    flex-direction: column-reverse;
    justify-content: space-around;
    align-items: start;
    gap: 0;
    height: 100vh;

  } */

  .home-content h3 {
    font-size: 2vmax;
  }
  .home-content h1 {
    font-size: 4vmax;
  }
  /* .home-img img {
    width: 60vw;
    overflow: hidden;
    margin-top: 4rem;
    margin-left: 4vmax;
    height: fit-content;
  } */
  .about {
    font-size: 2rem;
    margin: 3rem 0 ;

    
  } 
.home{  
  height: 20vmax;
  overflow: hidden;
  background: url(./images/home2.jpg) center;
  position: relative;
  padding: 0;
}  
 .slide_viewer {
  display: none; 
 } 
 .home-content{ 
  /* position: fixed;  */
  top: 30%;
  left: 18.0%;
  /* filter: blur(0.5px);  */
  color:rgb(255, 247, 232); 
  width: 70%;
  height: fit-content;
  padding: 4vmax 11vmax 4vmax 2vmax;
  overflow: hidden;
 
}
.home-content h1
 {
   font-size: 5rem; 
 }
 .home-content h3
 {
   font-size: 3rem;
   font-weight: 700;
 }

  .about
  {

    flex-direction: column-reverse;
  }
  .about img {
    width: 70vw;
    margin-top: 4rem;
  }

  .services h2 {
    margin-bottom: 3rem;
  }
  .portfolio h2 {
    margin-bottom: 3rem;
  }
  .portfolio-container {
    grid-template-columns: repeat(2, 1fr);
  }
  .footer-left {
    margin-top: 0.8rem;
  }
}



@media (max-width: 617px) {
  /* .home-img img {
    width: 60vw;
    overflow: hidden;
    margin-top: 4rem;
    margin-left: 4vmax;
    height: fit-content;
  } */
  .about-content p{
    text-align: center;
  }
  .portfolio-container {
    grid-template-columns: 1fr;
    justify-items: center;
  }
  
  .footerUpperPart {
    flex-direction: column-reverse;

  }
   


 .home-content{ 
  /* position: fixed;  */
  /* margin-left: -140px;
  margin-top: 15px;   */
  /* filter: blur(0.5px);  */
  color:rgb(255, 247, 232); 
}
.home-content h1
 {
   font-size: 3.5rem; 
 }
 .home-content h3
 {
   font-size: 2.2rem;
   font-weight: 700;
}
.slide_viewer {
    display: block; /* Ensure the slide viewer is visible on smaller screens */
  }
}







@media (max-width: 365px) {
  .home-img {
    width: 90vw;
  }
  .about-img {
    width: 90vw;
  }

 
  .home-content{ 
    /* position: fixed;  */
    /* margin-left: -190px;
    margin-top: 0px;   */
    /* filter: blur(0.5px);  */
    color:rgb(255, 247, 232); 
  }
  .home-content h1
   {
     font-size: 2.5rem; 
   }
   .home-content h3
   {
     font-size: 1.8rem;
     font-weight: 700;
   }

  .footer
  { 

    flex-direction: column;

    p{
      font-weight: bold;
    }
  }
  .footerUpperPart {
    flex-direction: column-reverse;
  }
  .footer p {
    text-align: center;
    margin-top: 2rem;
  }
}

.footer-left {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}
.socialIcons {
  padding: 1.2rem;
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
.socialIcons i {
  color: var(--second-color);

  font-size: 22px;
  /* margin-left:25px;
 margin-right:25px; */

 font-size:22px; 
 

}
.socialIcons a {
  display: grid;
  justify-content: center;
  align-items: center;
  padding: 1.3rem;
  background: var(--main-color);
  border-radius: 100%;
  /* transition: 0.5s ease; */
  margin: 15px;
}

.socialIcons a:hover {
  transform: scale(1.3);
  transition: .3s;
}
.footer-right {
  text-align: center;
}

.services-box a {
  text-decoration: none; /* Remove underline */
  color: inherit; /* Inherit the color from the parent */
  cursor: pointer; /* Show pointer cursor on hover */
}

.services-box a:hover {
  text-decoration: underline; /* Add underline on hover if needed */
}


/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey;
  border-radius: 10px;
  color: none;
  background-color: none;
  display: none;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: grey;
  border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: rgb(192, 223, 100);
}


.footer {
  padding: 40px;
  background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url('./images/istockphoto-1465642013-170667a.webp');
  background-size: cover; /* Ensure the background image covers the entire container */
  background-position: center; /* Center the background image */
  background-repeat: no-repeat; /* Prevent the background image from repeating */
  color: #fff;
  height: 190px;
}



.footer-grid {
  display: grid;
  align-items: center;
  justify-content: center;
  grid-template-columns: repeat(3, 1fr);
  gap: 20px;
}

.footer-title,
.footer-icons,
.footer-iconTop {
  text-align: center;
 
}
#backtoTop{
  position :fixed;
  bottom: 90px;
  right: 24px;
  height: 60px;
  width: 60px;
  background-color: #B19222;
  border-radius:50%;
  margin-bottom: 10px;
  justify-content: center;
  align-items: center;
  z-index: 1000;
  display: none; 
  transition: background-color 0.5s ease-in 0.3s;
}
#backtoTop a{
  display: inline-block;
height: 100%;
width: 100%;
 border-radius: 50%;
 justify-content: center;
 align-items: center;
  transition: 0.5s ease;
  padding: 1.2rem;

}
/* ... */

